# cplus-web

./: .gitignore  README.md
backend/: CMakeLists.txt  Makefile  README.md  deploy_centos.sh
backend/db/migration/: discussions.sql
backend/doc/: JudgeEngine_README_cn.md
backend/include/controller/: base_controller.h  controller_manager.h  discussion_controller.h  problem_controller.h  system_controller.h  user_controller.h
backend/include/database/: database.h  database_pool.h
backend/include/http/: http_server.h
backend/include/middleware/: auth_middleware.h
backend/include/models/: discussion.h  problem.h  problem_repository.h  submission.h  submission_repository.h  user.h
backend/include/services/: discussion_service.h  judge_engine.h  problem_service.h  ranking_service.h  submission_service.h  user_service.h
backend/include/utils/: jwt.h
backend/src/: main.cpp
backend/src/controller/: base_controller.cpp  controller_manager.cpp  discussion_controller.cpp  problem_controller.cpp  system_controller.cpp  user_controller.cpp
backend/src/database/: database.cpp  database.sql  database_pool.cpp
backend/src/models/: discussion.cpp  problem_repository.cpp  submission.cpp  submission_repository.cpp  user.cpp
backend/src/services/: judge_engine.cpp  problem_service.cpp  submission_service.cpp  user_service.cpp
backend/src/utils/: jwt.cpp
frontend/: .env.development  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/api/: discussion.js  leaderboard.js  problem.js  submission.js  user.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/utils/: formatter.js  permission.js  request.js
frontend/src/views/: Home.vue  Login.vue  MainPage.vue  Register.vue  UserHome.vue
frontend/src/views/admin/competitions/: CompetitionManagement.vue
frontend/src/views/admin/problems/: ProblemEdit.vue  ProblemList.vue  TestCaseManager.vue
frontend/src/views/admin/submissions/: SubmissionDetail.vue  SubmissionList.vue
frontend/src/views/admin/users/: UserList.vue
frontend/src/views/competitions/: UserCompetitions.vue
frontend/src/views/problems/: DiscussionList.vue  Leaderboard.vue  ProblemDetail.vue  ProblemList.vue  SubmissionList.vue
frontend/src/views/problems/components/: CodeSubmission.vue  ProblemDescription.vue  SubmissionDetail.vue  index.js
